add swagger.json auto generate, change strategy of adding files to DB
