# docs/swagger.json
@@ -19,15 +19,15 @@
       "description": "Basic Error Controller"
     },
     {
-      "name": "product-controller",
-      "description": "Product Controller"
+      "name": "products-controller",
+      "description": "Products Controller"
     }
   ],
   "paths": {
     "/api/v1/products": {
       "get": {
         "tags": [
-          "product-controller"
+          "products-controller"
         ],
         "summary": "getActualPrice",
         "operationId": "getActualPriceUsingGET",
@@ -66,10 +66,40 @@
         }
       }
     },
-    "/api/v1/products/statisic/date": {
+    "/api/v1/products/statistic/count": {
       "get": {
         "tags": [
-          "product-controller"
+          "products-controller"
+        ],
+        "summary": "getChangesCount",
+        "operationId": "getChangesCountUsingGET",
+        "produces": [
+          "*/*"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
+    },
+    "/api/v1/products/statistic/date": {
+      "get": {
+        "tags": [
+          "products-controller"
         ],
         "summary": "getStatisticByDay",
         "operationId": "getStatisticByDayUsingGET",
@@ -108,40 +138,10 @@
         }
       }
     },
-    "/api/v1/products/statistic/count": {
-      "get": {
-        "tags": [
-          "product-controller"
-        ],
-        "summary": "getChangesCount",
-        "operationId": "getChangesCountUsingGET",
-        "produces": [
-          "*/*"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
-          }
-        }
-      }
-    },
     "/api/v1/products/statistic/product": {
       "get": {
         "tags": [
-          "product-controller"
+          "products-controller"
         ],
         "summary": "getStatisticByProduct",
         "operationId": "getStatisticByProductUsingGET",
